--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,13 @@
 server.port=8090
 
 #datasource peoperties
-spring.datasource.url=jdbc:postgresql://localhost:5432/springdba
+spring.datasource.url=jdbc:postgresql://containers-us-west-199.railway.app:7154/railway
 #jdbc:mysql://localhost:3306/new
 
 #new is the schema name i have created in myql
 #give password and username of the mysql
 spring.datasource.username=postgres
-spring.datasource.password=pradyumna23
-
+spring.datasource.password=Tadj8TMdZqNcmV5kakC6
 #jpa related
 spring.jpa.hibernate.ddl-auto=update
 #update mean if table not present then create tab
